<resources>
    <string name="app_name">ImDonor</string>
    <string name="action_settings">Settings</string>
    <string name="donor_login">login as donor</string>
    <string name="blood_bank_login">login as blood bank</string>
    <string name="email_login">login via Email</string>
    <string name="phone_login">login via phone number</string>
    <string name="name">Name</string>
    <string name="blood_group">Blood Group</string>
    <string name="dob">D.O.B</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="last_date">Last donation date</string>
    <string name="sign_up">Sign Up</string>
    <string name="contact">Contact</string>
    <string name="county">County</string>
    <string name="town">Town</string>
    <string name="street_address">Street Address</string>
    <string name="title_activity_main_donor">MainActivityDonor</string>
    <string name="urgent_requests">Urgent Requests</string>
    <string name="news">News</string>
    <string name="donation_centres">Donation Centres</string>
    <string name="faqs">FAQs</string>
    <string name="quiz">Quiz</string>
    <string name="before_attending">Before Attending</string>
    <string name="learn_about_blood">Learn about blood</string>
    <string name="info">Info</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
</resources>
