<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.SingUpActivity">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:src="@drawable/img_donor" />

    <Button
        android:id="@+id/btn_login_gmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_login"
        android:layout_marginBottom="@dimen/spacing_large"
        android:textSize="25sp" />

    <Button
        android:layout_marginTop="@dimen/spacing_large"
        android:id="@+id/btn_phone_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_login"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textSize="40sp" />

</LinearLayout>